landings avanzadas, sin shop

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <div class="banner">
                 <div class="title">
                   <h1>What is a calorie deficit?</h1>
-                  <button type="button"><a href="./pages/caloriedeficit.html">Learn more</a></button>
+                  <button type="button">
+                        <a href="./pages/caloriedeficit.html">Learn more</a>
+                  </button>
                 </div>
         </div>
         <div class="recipes">
