--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Calorie Deficit</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
@@ -41,7 +41,62 @@
             </ul>
         </nav>
     </header>
-
+    <main class="mainR">
+        <div class="block1">
+            <img src="../img/lowcalories.png" alt="Low calories">
+            <h4 class="hiddenR">Low calories recipes</h4>
+            <a href="./recipes/lowcalories.html" class="allRecipes">All low calories recipes</a>
+        </div>
+        <div class="block2">
+                <div class="block2inside">
+                    <h2>Recipe title</h2>
+                    <a href="../pages/recipes/lowcalories.html""><img src="../img/cookies.webp" alt="Cookies"></a>
+                    <h4>150 calories per piece</h4>
+                    <div class="infoRecipes">
+                    <p class="infoProtein">50gr protein</p>
+                    <p class="infoFat">50gr fats</p>
+                    <p class="infoCarbs">50gr carbs</p>
+                    </div>
+                </div>
+                <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
+        </div>
+        <div class="block3">
+            <div class="block3inside">
+                <h2>Recipe title</h2>
+                <a href="../pages/recipes/lowcalories.html""><img src="../img/cookies.webp" alt="Cookies"></a>
+                <h4>150 calories per piece</h4>
+                <div class="infoRecipes">
+                <p class="infoProtein">50gr protein</p>
+                <p class="infoFat">50gr fats</p>
+                <p class="infoCarbs">50gr carbs</p>
+                </div>
+            </div>
+            <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
+        </div>
+        <div class="block4">
+            <img src="../img/highprotein.png" alt="High protein">
+            <h4 class="hiddenR">High protein recipes</h4>
+            <a href="./recipes/lowcalories.html" class="allRecipes">All high protein recipes</a>
+        </div>
+        <div class="block5">
+            <img src="../img/lowfat.png" alt="Low fat">
+            <h4 class="hiddenR">Low fat recipes</h4>
+            <a href="./recipes/lowcalories.html" class="allRecipes">All low fat recipes</a>
+        </div>
+        <div class="block6">
+            <div class="block6inside">
+                <h2>Recipe title</h2>
+                <a href="../pages/recipes/lowcalories.html"><img src="../img/cookies.webp" alt="Cookies"></a>
+                <h4>150 calories per piece</h4>
+                <div class="infoRecipes">
+                <p class="infoProtein">50gr protein</p>
+                <p class="infoFat">50gr fats</p>
+                <p class="infoCarbs">50gr carbs</p>
+                </div>
+            </div>
+            <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
+        </div>
+    </main>
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
