--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Calorie Deficit</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
@@ -41,7 +41,130 @@
             </ul>
         </nav>
     </header>
-
+    <main class="calculatorLanding">
+        <div class="calculator">
+            <h4>Calculate your own calorie deficit</h4>
+            <form class="form" action="input">
+                <div class="form1">
+                <p>Gender</p>
+                <div>
+                    <input type="radio" name="gender" id="gender"> Female
+                </div>
+                <div>
+                    <input type="radio" name="gender" id="gender"> Male
+                </div>
+                <div>
+                    <input type="radio" name="gender" id="gender"> Prefer not to say
+                </div>
+                </div>
+                <div class="form1">
+                <p>Age</p>
+                    <div>
+                        <input type="radio" name="age" id="age"> 18 - 25
+                    </div>
+                    <div>
+                        <input type="radio" name="age" id="age"> 25 - 29
+                    </div>
+                    <div>
+                        <input type="radio" name="age" id="age"> 30 - 35
+                    </div>
+                    <div>
+                        <input type="radio" name="age" id="age"> 36 - 40
+                    </div>
+                    <div>
+                        <input type="radio" name="age" id="age"> +41
+                    </div>
+                </div>
+                <div class="form1">
+                <p>Activity level</p>
+                    <div>
+                        <input type="radio" name="activity" id="activity"> Very active
+                    </div>
+                    <div>
+                        <input type="radio" name="activity" id="activity"> Active
+                    </div>
+                    <div>
+                        <input type="radio" name="activity" id="activity"> Not too active
+                    </div>
+                    <div>
+                        <input type="radio" name="activity" id="activity"> Not active at all
+                    </div>
+                </div>
+                <div class="form1">
+                <p>Height</p>
+                    <div>
+                        <input type="radio" name="height" id="height"> - 150 cms
+                    </div>
+                    <div>
+                        <input type="radio" name="height" id="height"> 151 - 165 cms
+                    </div>
+                    <div>
+                        <input type="radio" name="height" id="height"> 166 - 175 cms
+                    </div>
+                    <div>
+                        <input type="radio" name="height" id="height"> 176 - 185 cms
+                    </div>
+                    <div>
+                        <input type="radio" name="height" id="height"> +186 cms
+                    </div>
+                </div>
+            </form>
+            <button class="calcCD" type="submit">CALCULATE</button>
+        </div>
+        <section class="result">
+            <h2>Your result is</h2>
+            <h3><span class="resultCal">----</span> calories per day</h3>
+            <ul class="resultList">
+                <li>If you need to loss some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
+                <li>If you want to mantein your weight you should consume <span class="resultCal">----</span> calories per day.</li>
+                <li>you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
+            </ul>
+            <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
+        </section>
+        <h3 class="faqs">F.A.Q.</h3>
+        <section class="faqAll">
+            <div class="question">
+                <div class="faqTitle">
+                    <h4>Question 1</h4>
+                </div>
+                <div class="faqAnswer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="faqTitle">
+                    <h4>Question 2</h4>
+                </div>
+                <div class="faqAnswer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="faqTitle">
+                    <h4>Question 3</h4>
+                </div>
+                <div class="faqAnswer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="faqTitle">
+                    <h4>Question 4</h4>
+                </div>
+                <div class="faqAnswer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="faqTitle">
+                    <h4>Question 5</h4>
+                </div>
+                <div class="faqAnswer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
