--- a/pages/nutritionalinfo.html
+++ b/pages/nutritionalinfo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutritional info | Calorie Deficit</title>
-    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
@@ -41,7 +41,29 @@
             </ul>
         </nav>
     </header>
-
+    <main class="nutriInfo">
+            <h1>Nutritional Information</h1>
+            <div class="info1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ex dolorum voluptatibus aliquam quam nesciunt eaque quae est vel doloremque delectus, consectetur expedita! Neque quas ab quasi, recusandae quae quis maiores, dolore beatae enim, sequi corporis eaque officiis consequatur. Eveniet commodi fuga laudantium labore numquam, error voluptatibus quam culpa accusamus cumque inventore. Ut eum dolorem deleniti consequuntur vel possimus odio? Earum ex vel impedit assumenda deserunt repellat sunt, enim quisquam minus ab quasi eius possimus iusto quidem quo ipsum tenetur tempore ipsam numquam doloribus nisi quos neque! Velit at provident inventore quas laboriosam quasi perferendis omnis officiis suscipit reprehenderit dolorem corrupti officia consequatur aut eaque quos modi qui saepe, voluptates molestiae? Minus doloribus, dolorum debitis quos, harum voluptatem ad dignissimos enim, reprehenderit beatae iste a adipisci facere maxime! Voluptates, tempora eveniet quam assumenda nihil atque ex voluptatum eaque vitae error numquam odio iure laudantium magni amet vero! Eos repellat sint laborum omnis sunt, accusantium, minima nam totam corrupti veritatis, ut numquam architecto excepturi inventore debitis! Nisi enim repellat velit. Corrupti numquam iste magni dolorem veniam doloribus voluptate pariatur esse quae at nobis, quibusdam alias facere nihil officiis, tenetur aliquam quisquam eos tempore atque? Quaerat eos ullam dignissimos tenetur esse nesciunt? voluptates molestiae? Minus doloribus, dolorum debitis quos, harum voluptatem ad dignissimos enim, reprehenderit beatae iste a adipisci facere maxime! Voluptates, tempora eveniet quam assumenda nihil atque ex voluptatum eaque vitae error numquam odio iure laudantium magni amet vero! Eos repellat sint laborum omnis sunt, accusantium, minima nam totam corrupti veritatis, ut numquam architecto excepturi inventore debitis! Nisi enim repellat velit. Corrupti numquam iste magni dolorem veniam doloribus voluptate pariatur esse quae at nobis, quibusdam alias facere nihil officiis, tenetur aliquam quisquam eos tempore atque? Quaerat eos ullam dignissimos tenetur esse nesciunt?</p>
+                <img src="../img/infonutri.jpeg" alt="Nutritional Info">
+            </div>
+            <div class="infoMacros">
+                <h2>Macros: What are they and how to calculate them</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, ad exercitationem. Laudantium earum qui repudiandae rem. Aspernatur quaerat voluptates temporibus impedit quia ullam enim fugit unde rerum, maxime similique animi cumque et? Id, ex. Ullam error at repellendus quia iste quas deserunt ipsam aliquid aperiam itaque commodi libero natus nobis quod, incidunt quisquam tempore impedit blanditiis maiores nam repudiandae vitae autem facilis ad. Blanditiis a, ducimus molestias, quisquam consequatur perferendis assumenda ex voluptates libero, dolores necessitatibus iusto voluptatum amet natus fugit nihil debitis praesentium asperiores. Molestias rerum neque explicabo consequuntur. Nihil tempora officia repellat, perferendis deserunt assumenda voluptates temporibus modi.</p>
+            </div>
+            <div class="protein">
+                <h2>protein</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
+            </div>
+            <div class="carbs">
+                <h2>carbs</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
+            </div>
+            <div class="fats">
+                <h2>fats</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
+            </div>
+    </main>
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
