--- a/pages/recipes-lowcalories.html
+++ b/pages/recipes-lowcalories.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -41,61 +42,8 @@
             </ul>
         </nav>
     </header>
-    <main class="mainR">
-        <div class="block1">
-            <img src="../img/lowcalories.png" alt="Low calories">
-            <h4 class="hiddenR">Low calories recipes</h4>
-            <a href="./recipes/lowcalories.html" class="allRecipes">All low calories recipes</a>
-        </div>
-        <div class="block2">
-                <div class="block2inside">
-                    <h2>Recipe title</h2>
-                    <a href="../pages/recipes/lowcalories.html""><img src="../img/cookies.webp" alt="Cookies"></a>
-                    <h4>150 calories per piece</h4>
-                    <div class="infoRecipes">
-                    <p class="infoProtein">50gr protein</p>
-                    <p class="infoFat">50gr fats</p>
-                    <p class="infoCarbs">50gr carbs</p>
-                    </div>
-                </div>
-                <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
-        </div>
-        <div class="block3">
-            <div class="block3inside">
-                <h2>Recipe title</h2>
-                <a href="../pages/recipes/lowcalories.html""><img src="../img/cookies.webp" alt="Cookies"></a>
-                <h4>150 calories per piece</h4>
-                <div class="infoRecipes">
-                <p class="infoProtein">50gr protein</p>
-                <p class="infoFat">50gr fats</p>
-                <p class="infoCarbs">50gr carbs</p>
-                </div>
-            </div>
-            <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
-        </div>
-        <div class="block4">
-            <img src="../img/highprotein.png" alt="High protein">
-            <h4 class="hiddenR">High protein recipes</h4>
-            <a href="./recipes/lowcalories.html" class="allRecipes">All high protein recipes</a>
-        </div>
-        <div class="block5">
-            <img src="../img/lowfat.png" alt="Low fat">
-            <h4 class="hiddenR">Low fat recipes</h4>
-            <a href="./recipes/lowcalories.html" class="allRecipes">All low fat recipes</a>
-        </div>
-        <div class="block6">
-            <div class="block6inside">
-                <h2>Recipe title</h2>
-                <a href="../pages/recipes/lowcalories.html"><img src="../img/cookies.webp" alt="Cookies"></a>
-                <h4>150 calories per piece</h4>
-                <div class="infoRecipes">
-                <p class="infoProtein">50gr protein</p>
-                <p class="infoFat">50gr fats</p>
-                <p class="infoCarbs">50gr carbs</p>
-                </div>
-            </div>
-            <a href="./recipes/lowcalories.html" class="allRecipesResponsive">All low calories recipes</a>
-        </div>
+    <main>
+
     </main>
     <footer class="footer">
         <!--Social media icons-->
@@ -106,5 +54,6 @@
             <a href="http://www.youtube.com"><img src="../img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
