--- a/index.html
+++ b/index.html
@@ -67,15 +67,46 @@
               </nav>
         </nav>
     </header>
-    <main class="container">
-        <div class="banner">
-                <div class="title">
-                  <h1>What is a calorie deficit?</h1>
-                  <button type="button">
-                        <a href="./pages/caloriedeficit.html">Learn more</a>
-                  </button>
+    <main>
+        <div class="banner__carrousel">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active banner1">
+                    <div class="d-block w-100 title">
+                        <h1>What is a calorie deficit?
+                            <br>
+                            <a class="title__button p-3" href="./pages/caloriedeficit.html">LEARN MORE</a>
+                        </h1>
+                    </div>
+                  </div>
+                  <div class="carousel-item banner2">
+                    <div class="d-block w-100 title">
+                        <h1>New chocolate 
+                            <br>
+                            WHEY PROTEIN
+                            <br>
+                            <a class="title__button button-shop p-3" href="./pages/shop.html">SHOP NOW</a>
+                        </h1>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>
+
+        <section class="container">
+        <!--recipes-->
         <div class="recipes">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
@@ -111,33 +142,15 @@
                 </div>
               </form> 
         </div>
-        <section class="news">
-            <div class="news1">
-            </div>
-            <div class="news3">
-                <img src="./img/cookies.webp" alt="Cookies">
-            </div>
-            <div class="news2">
-                <div class="text">
-                        <h2>NEW RECIPE!</h2>
-                        <h3>Protein Cookies</h3>
-                        <h4>150 calories per pc</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ullam ipsum repudiandae esse rerum officia, accusantium numquam suscipit dolor nihil perferendis voluptate aliquid obcaecati pariatur. In error hic quisquam repudiandae.</p>
-                </div>
-                <div class="buttons">
-                       <a href="" class="button1">Get recipe</a>
-                       <a href="" class="button2">All high protein recipes</a>
-                </div>    
-            </div>
-        </section>
+       </section>
     </main>
     <footer class="footer">
     <!--Social media icons-->
         <h5>Follow us</h5>
         <div class="social">
-            <a href="http://www.facebook.com"><img src="./img/facebooklogo.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com"><img src="./img/instagramlogo.png" alt="Instagram"></a>
-            <a href="http://www.youtube.com"><img src="./img/youtubelogo.png" alt="Youtube"></a>
+            <a href="http://www.facebook.com"><img src="./img/facebook-logo.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com"><img src="./img/instagram-logo.png" alt="Instagram"></a>
+            <a href="http://www.youtube.com"><img src="./img/youtube-logo.png" alt="Youtube"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
