nueva nav y landings completas

--- a/index.html
+++ b/index.html
@@ -47,15 +47,8 @@
                       <li class="nav-item">
                         <a class="nav-link" href="./pages/calculator.html">Calculator</a>
                       </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Shop
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="./pages/shop.html">Shaker</a></li>
-                          <li><a class="dropdown-item" href="./pages/shop.html">Whey Protein</a></li>
-                          <li><a class="dropdown-item" href="./pages/shop.html">BMI Scales</a></li>
-                        </ul>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/shop.html">Shop</a>
                       </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -105,31 +98,31 @@
               </div>
         </div>
 
-        <section class="container">
+        <section class="container1">
         <!--recipes-->
         <div class="recipes">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
         <div class="cat1">
             <div class="maincat">
-              <a href="./recipes/lowcalories.html"><img src="./img/lowcalories.png" alt="Low calories"></a>
+              <a href="./pages/recipes-lowcalories.html"><img src="./img/lowcalories.png" alt="Low calories"></a>
             </div>
         </div>
         <div class="cat2">
             <div class="maincat">
-               <a href="./recipes/highprotein.html"><img src="./img/highprotein.png" alt="High protein"></a>
+               <a href="./pages/recipes-highprotein.html"><img src="./img/highprotein.png" alt="High protein"></a>
             </div>
         </div>
         <div class="cat3">
             <div class="maincat">
-              <a href="./recipes/lowfat.html"><img src="./img/lowfat.png" alt="Low fat"></a>
+              <a href="./pages/recipes-lowfat.html"><img src="./img/lowfat.png" alt="Low fat"></a>
             </div>
         </div>
         <div class="newsletter">
             <form id="newsletter">
                 <div class="containernews1">
-                  <h3>Subscribe to our Newsletter</h3>
-                  <p>Be one of the first ones to get new recipes every week!</p>
+                  <h3 class="text-secondary">Subscribe to our newsletter</h3>
+                  <p class="text-secondary">Be one of the first ones to get new recipes every week!</p>
                 </div>
               
                 <div class="containernews2">
@@ -138,7 +131,7 @@
                 </div>
               
                 <div class="containernews3">
-                  <input type="submit" value="Subscribe">
+                  <input type="submit" value="SUBSCRIBE">
                 </div>
               </form> 
         </div>
@@ -148,9 +141,9 @@
     <!--Social media icons-->
         <h5>Follow us</h5>
         <div class="social">
-            <a href="http://www.facebook.com"><img src="./img/facebook-logo.png" alt="Facebook"></a>
-            <a href="http://www.instagram.com"><img src="./img/instagram-logo.png" alt="Instagram"></a>
-            <a href="http://www.youtube.com"><img src="./img/youtube-logo.png" alt="Youtube"></a>
+            <a href="http://www.facebook.com"><img src="./img/facebooklogo.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com"><img src="./img/instagramlogo.png" alt="Instagram"></a>
+            <a href="http://www.youtube.com"><img src="./img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
