--- a/pages/caloriedeficit.html
+++ b/pages/caloriedeficit.html
@@ -4,52 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is | Calorie Deficit</title>
+    <title>What is a calorie deficit?| Calorie Deficit</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <!--Nav menu-->
-        <nav>
-            <div class="logo"><a href="../index.html"><img src="../img/logoblack.png" alt="Logo" id="logo"></a></div>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="./caloriedeficit.html" class="text">What is a calorie deficit</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./recipes.html" class="text">Recipes</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./nutritionalinfo.html" class="text">Nutritional information</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./calculator.html" class="text">Calculator</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./shop.html" class="text">Shop</a>
-                    <ul class="subnav">
-                        <li><a href="./shop/wheyprotein.html">Whey Protein</a></li>
-                        <li><a href="./shop/shakers.html">Shakers</a></li>
-                        <li><a href="./shop/scales.html">BMI Scales</a></li>
+         <!--Nav menu-->
+         <nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand logo" href="../index.html">
+                    <img src="../img/logoblack.png" alt="logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Recipes
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
+                            <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
+                            <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./calculator.html">Calculator</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./shop.html">Shop</a>
+                      </li>
                     </ul>
-                </li>
-            </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </nav>
     </header>
     <main class="mainCD">
         <div class="info">
-            <h1>What is a calorie deficit?</h1>
+            <h1 class="text-dark">What is a calorie deficit?</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.</p>
-            <img src="../img/banner2.jpeg" alt="Imagen">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum.</p>
+            <img src="../img/caloriedeficit-info.jpeg" alt="Imagen">
         </div>
         <aside class="calculator">
-            <h4>Calculate your own calorie deficit</h4>
+            <h4>Calculate your own 
+                <br>
+                calorie deficit</h4>
             <form action="input">
                 <p>Gender</p>
                 <div>
@@ -114,17 +134,17 @@
         </div>
         <div class="cat1">
             <div class="maincat">
-              <a href="./recipes/lowcalories.html"><img src="../img/lowcalories.png" alt="Low calories"></a>
+              <a href="./recipes-lowcalories.html"><img src="../img/lowcalories.png" alt="Low calories"></a>
             </div>
         </div>
         <div class="cat2">
             <div class="maincat">
-               <a href="./recipes/highprotein.html"><img src="../img/highprotein.png" alt="High protein"></a>
+               <a href="./recipes-highprotein.html"><img src="../img/highprotein.png" alt="High protein"></a>
             </div>
         </div>
         <div class="cat3">
             <div class="maincat">
-              <a href="./recipes/lowfat.html"><img src="../img/lowfat.png" alt="Low fat"></a>
+              <a href="./recipes-lowfat.html"><img src="../img/lowfat.png" alt="Low fat"></a>
             </div>
         </div>
     </main>
@@ -137,5 +157,6 @@
             <a href="http://www.youtube.com"><img src="../img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
