--- a/pages/nutritionalinfo.html
+++ b/pages/nutritionalinfo.html
@@ -4,65 +4,116 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nutritional info | Calorie Deficit</title>
+    <title>Nutritional Information | Calorie Deficit</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <!--Nav menu-->
-        <nav>
-            <div class="logo"><a href="../index.html"><img src="../img/logoblack.png" alt="Logo" id="logo"></a></div>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="./caloriedeficit.html" class="text">What is a calorie deficit</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./recipes.html" class="text">Recipes</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./nutritionalinfo.html" class="text">Nutritional information</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./calculator.html" class="text">Calculator</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./shop.html" class="text">Shop</a>
-                    <ul class="subnav">
-                        <li><a href="./shop/wheyprotein.html">Whey Protein</a></li>
-                        <li><a href="./shop/shakers.html">Shakers</a></li>
-                        <li><a href="./shop/scales.html">BMI Scales</a></li>
+         <!--Nav menu-->
+         <nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand logo" href="../index.html">
+                    <img src="../img/logoblack.png" alt="logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Recipes
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
+                            <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
+                            <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./calculator.html">Calculator</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./shop.html">Shop</a>
+                      </li>
                     </ul>
-                </li>
-            </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </nav>
     </header>
     <main class="nutriInfo">
             <h1>Nutritional Information</h1>
             <div class="info1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ex dolorum voluptatibus aliquam quam nesciunt eaque quae est vel doloremque delectus, consectetur expedita! Neque quas ab quasi, recusandae quae quis maiores, dolore beatae enim, sequi corporis eaque officiis consequatur. Eveniet commodi fuga laudantium labore numquam, error voluptatibus quam culpa accusamus cumque inventore. Ut eum dolorem deleniti consequuntur vel possimus odio? Earum ex vel impedit assumenda deserunt repellat sunt, enim quisquam minus ab quasi eius possimus iusto quidem quo ipsum tenetur tempore ipsam numquam doloribus nisi quos neque! Velit at provident inventore quas laboriosam quasi perferendis omnis officiis suscipit reprehenderit dolorem corrupti officia consequatur aut eaque quos modi qui saepe, voluptates molestiae? Minus doloribus, dolorum debitis quos, harum voluptatem ad dignissimos enim, reprehenderit beatae iste a adipisci facere maxime! Voluptates, tempora eveniet quam assumenda nihil atque ex voluptatum eaque vitae error numquam odio iure laudantium magni amet vero! Eos repellat sint laborum omnis sunt, accusantium, minima nam totam corrupti veritatis, ut numquam architecto excepturi inventore debitis! Nisi enim repellat velit. Corrupti numquam iste magni dolorem veniam doloribus voluptate pariatur esse quae at nobis, quibusdam alias facere nihil officiis, tenetur aliquam quisquam eos tempore atque? Quaerat eos ullam dignissimos tenetur esse nesciunt? voluptates molestiae? Minus doloribus, dolorum debitis quos, harum voluptatem ad dignissimos enim, reprehenderit beatae iste a adipisci facere maxime! Voluptates, tempora eveniet quam assumenda nihil atque ex voluptatum eaque vitae error numquam odio iure laudantium magni amet vero! Eos repellat sint laborum omnis sunt, accusantium, minima nam totam corrupti veritatis, ut numquam architecto excepturi inventore debitis! Nisi enim repellat velit. Corrupti numquam iste magni dolorem veniam doloribus voluptate pariatur esse quae at nobis, quibusdam alias facere nihil officiis, tenetur aliquam quisquam eos tempore atque? Quaerat eos ullam dignissimos tenetur esse nesciunt?</p>
-                <img src="../img/infonutri.jpeg" alt="Nutritional Info">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores aut nesciunt minima aliquid molestias ullam autem error incidunt rem nostrum harum ad eos, sit consequatur perferendis vitae omnis! Praesentium quaerat, laborum aut corporis doloremque recusandae necessitatibus neque? Facere consectetur placeat dicta fugiat praesentium libero. Dolore quasi consectetur molestiae cum saepe earum illum inventore quidem tempore ratione voluptatem ea, sint est reprehenderit quas modi quisquam temporibus sequi impedit voluptatum suscipit, natus, illo consequatur officia. Quidem magnam numquam ut ea pariatur voluptates ex, deserunt iste cum asperiores possimus placeat dolor rerum, doloribus, minus dolores corporis qui deleniti sequi. Tempore facere quia quos ullam fugiat quisquam explicabo illo ipsa repudiandae pariatur quidem provident quibusdam, veritatis necessitatibus aliquid consectetur quas. Aliquid, nostrum ea, asperiores voluptates reprehenderit labore minima, voluptatibus sint quibusdam incidunt tempore velit dolorem assumenda. Aliquid at quibusdam totam accusamus fuga omnis ullam cumque iste officiis soluta facere laboriosam veritatis ipsam perspiciatis placeat tenetur voluptate voluptatum commodi ipsa reprehenderit quisquam modi, perferendis repellendus! Totam alias distinctio tempore qui voluptatum unde odit sint aspernatur, aperiam natus nobis expedita iusto earum numquam provident voluptatibus modi, eius fugiat at eligendi id debitis sequi laborum molestias? Cumque quisquam ab quasi placeat dolore provident? Libero aspernatur distinctio eligendi!</p>
             </div>
-            <div class="infoMacros">
-                <h2>Macros: What are they and how to calculate them</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque, ad exercitationem. Laudantium earum qui repudiandae rem. Aspernatur quaerat voluptates temporibus impedit quia ullam enim fugit unde rerum, maxime similique animi cumque et? Id, ex. Ullam error at repellendus quia iste quas deserunt ipsam aliquid aperiam itaque commodi libero natus nobis quod, incidunt quisquam tempore impedit blanditiis maiores nam repudiandae vitae autem facilis ad. Blanditiis a, ducimus molestias, quisquam consequatur perferendis assumenda ex voluptates libero, dolores necessitatibus iusto voluptatum amet natus fugit nihil debitis praesentium asperiores. Molestias rerum neque explicabo consequuntur. Nihil tempora officia repellat, perferendis deserunt assumenda voluptates temporibus modi.</p>
-            </div>
-            <div class="protein">
-                <h2>protein</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
-            </div>
-            <div class="carbs">
-                <h2>carbs</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
-            </div>
-            <div class="fats">
-                <h2>fats</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi soluta quod possimus ea voluptate eos commodi fuga hic, quo aspernatur consequatur perferendis eius eveniet molestias itaque quia repudiandae sequi architecto repellat eum nostrum blanditiis. Vel assumenda maxime fugiat accusantium perspiciatis? Necessitatibus natus minima ut quasi dicta earum sit at est beatae aut esse accusantium quas laborum blanditiis unde laboriosam veritatis architecto similique voluptatibus assumenda veniam consequatur, dolores ab ad?</p>
-            </div>
+            
+
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button protein__button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                      proteins
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                        <div class="protein__bg">
+                            <img src="../img/proteins.png" alt="">
+                            <a class="text-dark p-3" href="./recipes-highprotein.html">Check high protein recipes</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed carbs__button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                      carbs
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">
+                        <div class="carbs__bg">
+                            <img src="../img/carbs.png" alt="carbs">
+                            <a class="text-dark p-3" href="./recipes-lowcalories.html">Check low calories recipes</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <button class="accordion-button collapsed fats__button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                      fats
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                    <div class="accordion-body">
+                        <div class="fats__bg">
+                            <img src="../img/fats.png" alt="fats">
+                            <a class="text-dark p-3" href="./recipes-lowfat.html">Check low fat recipes</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
@@ -73,5 +124,6 @@
             <a href="http://www.youtube.com"><img src="../img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
