--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -11,34 +11,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,500;1,700&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <!--Nav menu-->
-        <nav>
-            <div class="logo"><a href="../index.html"><img src="../img/logoblack.png" alt="Logo" id="logo"></a></div>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="./caloriedeficit.html" class="text">What is a calorie deficit</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./recipes.html" class="text">Recipes</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./nutritionalinfo.html" class="text">Nutritional information</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./calculator.html" class="text">Calculator</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./shop.html" class="text">Shop</a>
-                    <ul class="subnav">
-                        <li><a href="./shop/wheyprotein.html">Whey Protein</a></li>
-                        <li><a href="./shop/shakers.html">Shakers</a></li>
-                        <li><a href="./shop/scales.html">BMI Scales</a></li>
+         <!--Nav menu-->
+         <nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand logo" href="../index.html">
+                    <img src="../img/logoblack.png" alt="logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Recipes
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
+                            <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
+                            <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./calculator.html">Calculator</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./shop.html">Shop</a>
+                      </li>
                     </ul>
-                </li>
-            </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </nav>
     </header>
     <main class="calculatorLanding">
@@ -121,49 +140,72 @@
             </ul>
             <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
         </section>
+
+        <!--faqs questions-->
+
         <h3 class="faqs">F.A.Q.</h3>
-        <section class="faqAll">
-            <div class="question">
-                <div class="faqTitle">
-                    <h4>Question 1</h4>
+        <div class="accordion m-5" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Question 1
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro natus sequi corrupti architecto dolorum alias, fuga iste pariatur consectetur consequuntur!
                 </div>
-                <div class="faqAnswer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
-                </div>
+              </div>
             </div>
-            <div class="question">
-                <div class="faqTitle">
-                    <h4>Question 2</h4>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Question 2
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam necessitatibus quos sed ut cumque totam eos sit porro repellat.
                 </div>
-                <div class="faqAnswer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
-                </div>
+              </div>
             </div>
-            <div class="question">
-                <div class="faqTitle">
-                    <h4>Question 3</h4>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Question 3
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident fuga sed consectetur repellendus excepturi vero mollitia officiis voluptas et eveniet!
                 </div>
-                <div class="faqAnswer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
-                </div>
+              </div>
             </div>
-            <div class="question">
-                <div class="faqTitle">
-                    <h4>Question 4</h4>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Question 4
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi quibusdam atque aspernatur repudiandae corrupti voluptatum minus inventore voluptates deleniti fuga!
+                  </div>
                 </div>
-                <div class="faqAnswer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFive">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    Question 5
+                  </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non vel voluptates totam? Eligendi at iusto consectetur quasi quas, odit distinctio.
+                  </div>
                 </div>
-            </div>
-            <div class="question">
-                <div class="faqTitle">
-                    <h4>Question 5</h4>
-                </div>
-                <div class="faqAnswer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus quas cupiditate explicabo corporis, vel ipsum recusandae at sit molestiae!</p>
-                </div>
-            </div>
-        </section>
+              </div>
+          </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
@@ -174,5 +216,6 @@
             <a href="http://www.youtube.com"><img src="../img/youtubelogo.png" alt="Youtube"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
