--- a/pages/recipes-lowcalories.html
+++ b/pages/recipes-lowcalories.html
@@ -16,34 +16,136 @@
 </head>
 <body>
     <header>
-        <!--Nav menu-->
-        <nav>
-            <div class="logo"><a href="../index.html"><img src="../img/logoblack.png" alt="Logo" id="logo"></a></div>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fas fa-bars"></i>
-            </label>
-            <ul>
-                <li><a href="./caloriedeficit.html" class="text">What is a calorie deficit</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./recipes.html" class="text">Recipes</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./nutritionalinfo.html" class="text">Nutritional information</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./calculator.html" class="text">Calculator</a></li>
-                <li><h class="separation">|</h></li>
-                <li><a href="./shop.html" class="text">Shop</a>
-                    <ul class="subnav">
-                        <li><a href="./shop/wheyprotein.html">Whey Protein</a></li>
-                        <li><a href="./shop/shakers.html">Shakers</a></li>
-                        <li><a href="./shop/scales.html">BMI Scales</a></li>
+         <!--Nav menu-->
+         <nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand logo" href="../index.html">
+                    <img src="../img/logoblack.png" alt="logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./caloriedeficit.html">What is a calorie deficit?</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Recipes
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./recipes-lowcalories.html">Low calories</a></li>
+                            <li><a class="dropdown-item" href="./recipes-highprotein.html">High Protein</a></li>
+                            <li><a class="dropdown-item" href="./recipes-lowfat.html">Low fat</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./nutritionalinfo.html">Nutritional information</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./calculator.html">Calculator</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./shop.html">Shop</a>
+                      </li>
                     </ul>
-                </li>
-            </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </nav>
     </header>
     <main>
-
+        <section class="banner__recipes">
+            <div class="title__lowcalories">
+                <h1 class="title__text__recipes">
+                    low calories <br> recipes
+                </h1>
+            </div>
+            <div class="text__recipes">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus, harum vero suscipit illo quis hic ipsum eaque amet aspernatur nulla tenetur cumque, eveniet error reprehenderit rerum, quam iusto quos! Accusamus quaerat eos nobis vel praesentium itaque quasi, ipsum vero atque voluptatibus rem similique, soluta molestias, minima nostrum architecto nesciunt!
+            </div>
+        </section>
+        <section class="recipes__cards__lowcalories">
+            <div class="card card1" style="width: 18rem;">
+                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <div class="card-body">
+                  <h5 class="card-title recipe-title">Recipe name</h5>
+                  <p class="card-text">Quatity of calories</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item protein__colour">Xgr protein</li>
+                  <li class="list-group-item carbs__colour">Xgr carbs</li>
+                  <li class="list-group-item fats__colour">Xgr fats</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Go to recipe</a>
+                </div>
+              </div>
+              <div class="card card2" style="width: 18rem;">
+                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <div class="card-body">
+                  <h5 class="card-title recipe-title">Recipe name</h5>
+                  <p class="card-text">Quatity of calories</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item protein__colour">Xgr protein</li>
+                  <li class="list-group-item carbs__colour">Xgr carbs</li>
+                  <li class="list-group-item fats__colour">Xgr fats</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Go to recipe</a>
+                </div>
+              </div>
+              <div class="card card3" style="width: 18rem;">
+                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <div class="card-body">
+                  <h5 class="card-title recipe-title">Recipe name</h5>
+                  <p class="card-text">Quatity of calories</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item protein__colour">Xgr protein</li>
+                  <li class="list-group-item carbs__colour">Xgr carbs</li>
+                  <li class="list-group-item fats__colour">Xgr fats</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Go to recipe</a>
+                </div>
+              </div>
+              <div class="card card4" style="width: 18rem;">
+                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <div class="card-body">
+                  <h5 class="card-title recipe-title">Recipe name</h5>
+                  <p class="card-text">Quatity of calories</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item protein__colour">Xgr protein</li>
+                  <li class="list-group-item carbs__colour">Xgr carbs</li>
+                  <li class="list-group-item fats__colour">Xgr fats</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Go to recipe</a>
+                </div>
+              </div>
+        </section>
+        <h4 class="check__also">Check also</h4>
+        <section class="other__categories">
+            <div class="cat2 landing__recipes">
+                <div class="maincat">
+                   <a href="./recipes-highprotein.html"><img src="../img/highprotein.png" alt="High protein"></a>
+                </div>
+            </div>
+            <div class="cat3 landing__recipes">
+                <div class="maincat">
+                  <a href="./recipes-lowfat.html"><img src="../img/lowfat.png" alt="Low fat"></a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <!--Social media icons-->
